--- a/client/webserver/site/src/css/bootstrap.scss
+++ b/client/webserver/site/src/css/bootstrap.scss
@@ -14,9 +14,9 @@
 // @import "~bootstrap/scss/_code.scss";
 @import "~bootstrap/scss/grid";
 // @import "~bootstrap/scss/tables";
-@import "~bootstrap/scss/forms/labels";
-@import "~bootstrap/scss/forms/form-text";
-@import "~bootstrap/scss/forms/form-control";
+// @import "~bootstrap/scss/forms/labels";
+// @import "~bootstrap/scss/forms/form-text";
+// @import "~bootstrap/scss/forms/form-control";
 @import "~bootstrap/scss/forms/form-select";
 @import "~bootstrap/scss/forms/form-check";
 // @import "~bootstrap/scss/buttons";
