--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -79,7 +79,7 @@
         <button id="disableAcctBtn">[[[Disable Account]]]</button>
       </div>
       <div class="border-top py-2">
-        <input type="file" class="form-control select d-none" id="certFileInput">
+        <input type="file" class="d-none" id="certFileInput">
         <button id="updateCertBtn">[[[Update TLS Certificate]]]</button>
         <span class="mx-2 d-hide text-success" id="updateCertMsg">[[[successful_cert_update]]]</span>
       </div>
