--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -107,8 +107,8 @@
     <form id="pwForm" class="flex-stretch-column">
       <div class="form-closer"><span class="ico-cross"></span></div>
       <div class="mb-3">
-        <label for="pwInput" class="form-label">[[[App Password]]]</label>
-        <input type="password" class="form-control select" id="pwInput" autocomplete="off">
+        <label for="pwInput">[[[App Password]]]</label>
+        <input type="password" id="pwInput" autocomplete="off">
       </div>
       <div class="text-end">
         <button id="pwSubmit" class="go">[[[Submit]]]</button>
