--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -41,6 +41,7 @@
         height: 20px;
         border-radius: 10px;
         border: 3px solid var(--body-bg);
+        background-color: var(--body-bg);
       }
     }
 
