--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -30,7 +30,7 @@
       {{- /* STRATEGY SELECTION */ -}}
       <div id="gapStrategyBox" class="w-100 mb-3">
         <div class="flex-stretch-column pb-2">
-          <label class="form-label">[[[gap_strategy]]]</label>
+          <label>[[[gap_strategy]]]</label>
           <select id="gapStrategySelect" class="form-select fs18">
             <option value="percent-plus">[[[gap_strategy_percent_plus]]]</option>
             <option value="percent">[[[gap_strategy_percent]]]</option>
@@ -110,19 +110,19 @@
                   <span data-tmpl="removeBtn" class="ico-cross fs15 pointer text-danger"></span>
                 </td>
                 <td>
-                  <span data-tmpl="upBtn" class="ico-arrowup fs15 pointer text-muted"></span>
+                  <span data-tmpl="upBtn" class="ico-arrowup fs15 pointer grey"></span>
                 </td>
                 <td class="text-end">
                   <span
-                    class="ico-arrowdown fs15 pointer text-muted"
+                    class="ico-arrowdown fs15 pointer grey"
                     data-tmpl="downBtn"
                   ></span>
                 </td>
               </tr>
               <tr id="addBuyPlacementRow">
                 <td></td>
-                <td><input id="addBuyPlacementLots" class="form-control lots-input" step="1" type="number"></td>
-                <td><input id="addBuyPlacementGapFactor" class="form-control gap-factor-input" type="number"></td>
+                <td><input id="addBuyPlacementLots" class="lots-input" step="1" type="number"></td>
+                <td><input id="addBuyPlacementGapFactor" class="gap-factor-input" type="number"></td>
                 <td></td>
                 <td></td>
                 <td class="text-end">
@@ -157,8 +157,8 @@
             <tbody id="sellPlacementsTableBody">
               <tr id="addSellPlacementRow">
                 <td></td>
-                <td><input id="addSellPlacementLots" class="form-control lots-input" step="1" type="number"></td>
-                <td><input id="addSellPlacementGapFactor" class="form-control gap-factor-input" type="number"></td>
+                <td><input id="addSellPlacementLots" class="lots-input" step="1" type="number"></td>
+                <td><input id="addSellPlacementGapFactor" class="gap-factor-input" type="number"></td>
                 <td></td>
                 <td></td>
                 <td class="text-end">
@@ -230,7 +230,7 @@
         </div>
 
         <div class="settings-card">
-          <label for="emptyMarketRateCheckbox" class="fs18 d-flex align-items-center justify-content-between w-100 form-label">
+          <label for="emptyMarketRateCheckbox" class="fs18 d-flex align-items-center justify-content-between w-100">
             <div class="flex-center">
               <input type="checkbox" id="emptyMarketRateCheckbox" class="form-check-input me-2 mt-0" checked>
               <span>[[[empty_market_rate]]]</span>
@@ -238,7 +238,7 @@
             <span class="ico-info fs12 ms-1" data-tooltip="[[[empty_market_rate_tooltip]]]"></span>
           </label>
           <div id="emptyMarketRateInputBox" class="pt-2 mt-2 border-top">
-            <input type="number" class="form-control w-25" id="emptyMarketRateInput">
+            <input type="number" class="w-25" id="emptyMarketRateInput">
           </div>
           <div id="emptyMarketRateErr" class="pt-2 flex-center text-danger"></div>
         </div>
@@ -449,12 +449,12 @@
         <span id="cexConnectErr" class="fs14 mt-2 text-break"></span>
       </div>
       <div class="d-flex flex-column mb-3">
-        <label for="cexApiKeyInput" class="form-label">[[[API Key]]]</label>
-        <input type="text" id="cexApiKeyInput" class="form-control">
+        <label for="cexApiKeyInput">[[[API Key]]]</label>
+        <input type="text" id="cexApiKeyInput">
       </div>
       <div class="d-flex flex-column mb-3">
-        <label for="cexSecretInput" class="form-label">[[[API Secret]]]</label>
-        <input type="text" id="cexSecretInput" class="form-control">
+        <label for="cexSecretInput">[[[API Secret]]]</label>
+        <input type="text" id="cexSecretInput">
       </div>
       <div id="cexFormErr" class="flex-center px-3 pt-2 text-danger text-break d-hide"></div>
       <div class="d-flex justify-content-end">
@@ -553,7 +553,7 @@
 
       <div id="marketFilterBox" class="flex-center mb-3">
         <div class="position-relative">
-          <input id="marketFilterInput" type="text" class="form-control">
+          <input id="marketFilterInput" type="text">
           <span id="marketFilterIcon" class="fs22 ico-search"></span>
         </div>
       </div>
